# nr-fds-pyetl

./: .dockerignore  .gitignore  Dockerfile.data_load  Dockerfile.dbutils  Dockerfile.ora_ingest  Dockerfile.pg_ingest  Dockerfile.tmp  README.md  docker-compose.yml  env_sample  getmigrations.sh  pyproject.toml
.github/workflows/: .deploy.yml  etl-prod.yml  etl-test.yml  job-sync.yml  merge.yml  pr-close.yml  pr-open.yml  pr-validate.yml
common/: openshift.init.yml
data_prep/: README.md  constants.py  db_lib.py  debug_data_loads.py  docker_parser.py  docker_run_ORA_TEST.bash  docker_run_ORA_TEST.sh  docker_run_SPAR_TEST.bash  docker_run_SPAR_TEST.sh  docker_run_TEST.bash  env_config.py  kubernetes_wrapper.py  logging.config  main_common.py  main_extract.py  main_ingest.py  main_injest.py  main_ora_extract.py  main_spar_extract.py  main_spar_ingest.py  object_store.py  oradb_lib.py  poetry_notes.md  postgresdb_lib.py  pull_ora_objstr.py  pyproject.toml  readme.md
data_prep/data_ingest/: run_data_inject_oc.sh  run_data_inject_ora.sh
data_prep/db_env_utils/: db_lib.py  docker_parser.py  fix_forest_client_fk_violation.py  main_common.py  main_ora_extract.py  main_ora_ingest.py  main_spar_extract.py  main_spar_ingest.py  object_store.py  oradb_lib.py  postgresdb_lib.py
data_prep/migrations_ora/: remove_pk_indexes.py
data_prep/migrations_ora/sql/: V1.0.1__smp_mix_gen_qlty.sql  V1.0.2__seedlot_parent_tree_smp_mix.sql  V1.0.4__seedlot_gen_worth.sql  V1.0.5__seed_plan_zone.sql  V1.0.7__seed_plan_zone.sql  V1.3.0__seedlot_genetic_worth.sql  V1.7.0__seedlot_smp.sql
data_prep/migrations_ora_old/sql/: V1.0.0__seedlot_tab.sql  V1.0.3__seedlot_pt_gen_q.sql  V1.0.6__seed_own_quant.sql  V1.4.0__seedlot_owner_quantity.sql  V1.5.0__parent_tree.sql  V1.8.1__seedlot_audit.sql
data_prep/ora_db_init/: Dockerfile
data_prep/ora_db_init/db_init/: db_init.sql
data_prep/ora_db_init/init_scripts/: 1_create_users.sql
data_prep/oradb_demo/: README.md
data_prep/tests/: conftest.py  test_constants.py  test_docker_parser.py  test_main_common.py  test_object_store.py  test_oradb_lib.py  test_oralib.py  test_postgresdb_lib.py
data_prep/tests/fixtures/: dockerdb_fixtures.py  oradb_fixtures.py
docs/: data_extract.md  data_load.md  local_dev.md  ora_migrations.md
migrations_ora/sql/: V1.0.0__first_migration.sql  V1.2.0__seedlot_table_dependencies.sql  V1.6.0__seedlot_plan_zone.sql  V1.8.0__seed_plan_zone.sql  V2.0.0__concep_tabs.sql  V2.0.1__concep_tabs_2_fix.sql  V2.0.2__concep_tabs_3.sql  V2.0.3__concep_tabs_4.sql  V2.1.0__consep_views_1.sql
migrations_spar/: init.sql
migrations_spar/original_single/: V1.0.0__initial_state.sql
migrations_spar/sql/: V999__etl_patch.sql
ora-env/: readme.md
ora-env/migrations/ora/: V1.0.0__seedlot.sql  V1.0.2__seedlot_TYP.sql  V1.0.3__seedlot_PKG.sql  V1.0.4__seedlot_FP.sql  V1.0.5__seedlot_TRG.sql  V1.1.0__seedlot_genetic_worth.sql  V1.1.5__seedlot_genetic_worth_TRG.sql  V1.2.0__seedlot_owner_quantity.sql  V1.2.5__seedlot_owner_quantity_TRG.sql  V1.3.0__seedlot_parent_tree.sql  V1.4.0__seedlot_parent_tree_gen_qlty.sql  V1.5.0__seedlot_parent_tree_smp_mix.sql  V1.6.0__smp_mix.sql  V1.7.0__smp_mix_gen_qlty.sql
oradb/: README.md  notes.md
oradb/init_scripts/: 2_grant_permissions.sh
sync/: .dockerignore  Dockerfile  README.md  localenvs.txt  oc_run.sh  openshift.deploy.yml  poetry.toml  pyproject.toml  requirements.txt  run.sh
sync/config/SQL/SPAR/: POSTGRES_SEEDLOT_EXTRACT.sql
sync/oradb/: db_init.sql  docker-compose.yml  notes.md  removeDatabase
sync/src/: junk.py  logging.config  main.py  readme.md
sync/src/module/: data_sync_control.py  data_synchronization.py  database_connection.py  test_db_connection.py
