[tool.poetry]
name = "spar-sync"
version = "0.1.0"
description = "python code used to migrate data between oracle and postgres databases."
authors = ["Your Name <you@example.com>"]
license = "apache"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
oracledb = "^2.5.0"
numpy = "^2.1.3"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"
SQLAlchemy = "^2.0.36"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

# Ignore some errors in tests as they are not relevant
[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "S105", # local dev password fields are verified
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

